Title style caps for title slides & paths

--- a/site/training/developer-fundamentals/developer-fundamentals-register.qmd
+++ b/site/training/developer-fundamentals/developer-fundamentals-register.qmd
@@ -14,25 +14,25 @@ listing:
     image-align: left
     contents:
     - path: using-validmind-for-model-development.html
-      title: "Using {{< var vm.product >}} for model development"
+      title: "Using {{< var vm.product >}} for Model Development"
       subtitle: "Module 1"
       description: "{{< fa check >}} Register a model in the {{< var validmind.platform >}} <br> {{< fa check >}} Install the {{< var validmind.developer >}} in your environment <br> {{< fa check >}} Connect to your registered model <br> {{< fa check >}} Preview your model's documentation template"
       reading-time: "15"
       author: "{{< var vm.product >}}"
     - path: learning-to-run-tests.html
-      title: "Learning to run tests"
+      title: "Learning to Run Tests"
       subtitle: "Module 2"
       description: "{{< fa check >}} Identify relevant tests to run from {{< var vm.product >}}'s test vault <br> {{< fa check >}} Initialize datasets & models for use with the {{< var validmind.developer >}} <br> {{< fa check >}} Run and log out-of-the-box tests for new and existing models <br> {{< fa check >}} Insert test results into your model's documentation"
       reading-time: "45"
       author: "{{< var vm.product >}}"
     - path: implementing-custom-tests.html
-      title: "Implementing custom tests"
+      title: "Implementing Custom Tests"
       subtitle: "Module 3"
       description: "{{< fa check >}} Implement, run, and log custom inline and reusable tests <br> {{< fa check >}} Refresh your template to include inserted test-driven blocks <br> {{< fa check >}} Configure your template to include custom tests"
       reading-time: "45"
       author: "{{< var vm.product >}}"
     - path: finalizing-model-documentation.html
-      title: "Finalizing model documentation"
+      title: "Finalizing Model Documentation"
       subtitle: "Module 4"
       description: "{{< fa check >}} Refine your model documentation <br> {{< fa check >}} Submit your model documentation for approval <br> {{< fa check >}} Track changes and other updates to your model"
       reading-time: "20"
