--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Finalizing <br>model documentation"
+title: "Finalizing <br>Model Documentation"
 subtitle: "Developer Fundamentals — Module 4 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
