--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Learning to <br>run tests"
+title: "Learning to <br>Run Tests"
 subtitle: "Developer Fundamentals — Module 2 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
