--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Using {{< var vm.product >}} <br>for model development"
+title: "Using {{< var vm.product >}} <br>for Model Development"
 subtitle: "Developer Fundamentals — Module 1 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
