--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -34,7 +34,7 @@ Learn how to use {{< var vm.product >}} as a **developer** to generate model doc
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Using {{< var vm.product >}} for model development
+#### <sup>Module 1</sup><br> Using {{< var vm.product >}} for Model Development
 
 - Register a model in the {{< var validmind.platform >}}
 - Install the {{< var validmind.developer >}} in your environment
@@ -43,7 +43,7 @@ Learn how to use {{< var vm.product >}} as a **developer** to generate model doc
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Learning to run tests
+#### <sup>Module 2</sup><br> Learning to Run Tests
 
 - Identify relevant tests to run from {{< var vm.product >}}'s test vault
 - Initialize datasets & models for use with the {{< var validmind.developer >}}
@@ -56,7 +56,7 @@ Learn how to use {{< var vm.product >}} as a **developer** to generate model doc
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Implementing custom tests
+#### <sup>Module 3</sup><br> Implementing Custom Tests
 
 - Implement, run, and log custom inline and reusable tests
 - Refresh your template to include inserted test-driven blocks
@@ -64,7 +64,7 @@ Learn how to use {{< var vm.product >}} as a **developer** to generate model doc
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Finalizing model documentation
+#### <sup>Module 4</sup><br> Finalizing Model Documentation
 
 - Refine your model documentation
 - Submit your model documentation for approval
@@ -94,7 +94,7 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Using {{< var vm.product >}} for model validation
+#### <sup>Module 1</sup><br> Using {{< var vm.product >}} for Model Validation
 
 - Install the {{< var validmind.developer >}} in your environment
 - Connect to a champion model as a validator
@@ -104,7 +104,7 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Running data quality tests
+#### <sup>Module 2</sup><br> Running Data Quality Tests
 
 - Identify relevant tests to run from {{< var vm.product >}}'s test vault
 - Initialize datasets for use with the {{< var validmind.developer >}}
@@ -118,7 +118,7 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Developing challenger models
+#### <sup>Module 3</sup><br> Developing Challenger Models
 
 - Initialize models for use with the {{< var validmind.developer >}}
 - Run and log out-of-the box and custom tests for your models
@@ -127,7 +127,7 @@ Learn how to use {{< var vm.product >}} as a **validator** to generate validatio
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Finalizing validation reports
+#### <sup>Module 4</sup><br> Finalizing Validation Reports
 
 - Make qualitative edits to your validation report
 - Submit your validation report for approval
@@ -189,14 +189,14 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> {{< var validmind.platform >}} onboarding
+#### <sup>Module 1</sup><br> {{< var validmind.platform >}} Onboarding
 
 - Setting up an organization <!-- {{< fa check >}} -->
 - Inviting users via email <!-- {{< fa check >}} -->
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> User management
+#### <sup>Module 2</sup><br> User Management
 
 - Managing roles, permissions, and groups <!-- {{< fa check >}} -->
 - Mapping users to groups and roles <!-- {{< fa minus >}} -->
@@ -207,14 +207,14 @@ Learn how to use {{< var vm.product >}} as an **administrator** to onboard your 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Lifecycle statuses & workflows
+#### <sup>Module 3</sup><br> Lifecycle Statuses & Workflows
 
 - Configuring statuses & workflows <!-- {{< fa minus >}} -->
 - Assigning users to workflows <!-- {{< fa minus >}} -->
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Templates & inventory fields
+#### <sup>Module 4</sup><br> Templates & Inventory Fields
 
 - Customize templates <!-- {{< fa check >}} -->
 - Configure model inventory fields <!-- {{< fa x >}} -->
@@ -269,7 +269,7 @@ Learn how to use {{< var vm.product >}} to manage the **ongoing monitoring** of 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Using {{< var vm.product >}} for ongoing monitoring
+#### <sup>Module 1</sup><br> Using {{< var vm.product >}} for Ongoing Monitoring
 
 - How monitoring integrates with model documentation <!-- {{< fa x >}} -->
 - Enable monitoring for a model <!-- {{< fa check >}} -->
@@ -277,7 +277,7 @@ Learn how to use {{< var vm.product >}} to manage the **ongoing monitoring** of 
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Setting up monitoring
+#### <sup>Module 2</sup><br> Setting Up Monitoring
 
 - Load the reference and monitoring datasets <!-- {{< fa check >}} -->
 - Load the production model <!-- {{< fa check >}} -->
@@ -290,7 +290,7 @@ Learn how to use {{< var vm.product >}} to manage the **ongoing monitoring** of 
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Scheduling & execution
+#### <sup>Module 3</sup><br> Scheduling & Execution
 
 - Run the ongoing monitoring tests <!-- {{< fa check >}} -->
 - Conduct target and feature drift testing <!-- {{< fa check >}} -->
@@ -358,7 +358,7 @@ Learn how to navigate the {{< var vm.product >}}'s key features and understand h
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> The {{< var vm.product >}} model inventory
+#### <sup>Module 1</sup><br> The {{< var vm.product >}} Model Inventory
 
 - Understand how the model inventory serves as your central hub for registered models <!-- {{< fa check >}} -->
 - Learn to register new models with appropriate templates <!-- {{< fa check >}} -->
@@ -367,7 +367,7 @@ Learn how to navigate the {{< var vm.product >}}'s key features and understand h
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Model documentation & testing
+#### <sup>Module 2</sup><br> Model Documentation & Testing
 
 - Navigate the documentation templates and structure <!-- {{< fa check >}} -->
 - Explore the library of 250+ out-of-the-box tests <!-- {{< fa check >}} -->
@@ -380,7 +380,7 @@ Learn how to navigate the {{< var vm.product >}}'s key features and understand h
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 3</sup><br> Validation & collaboration
+#### <sup>Module 3</sup><br> Validation & Collaboration
 
 - Create and manage validation reports <!-- {{< fa check >}} -->
 - Learn to assess compliance and link evidence <!-- {{< fa check >}} -->
@@ -389,7 +389,7 @@ Learn how to navigate the {{< var vm.product >}}'s key features and understand h
 :::
 
 ::: {.w-50-ns}
-#### <sup>Module 4</sup><br> Monitoring & governance
+#### <sup>Module 4</sup><br> Monitoring & Governance
 
 - Set up ongoing monitoring for production models <!-- {{< fa check >}} -->
 - Track model performance and identify data drift <!-- {{< fa check >}} -->
@@ -447,14 +447,14 @@ Learn how to use {{< var vm.product >}}'s content features to enhance documentat
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-50-ns}
-#### <sup>Module 1</sup><br> Using text generation
+#### <sup>Module 1</sup><br> Using Text Generation
 
 - When to use GenAI to draft content <!-- {{< fa x >}} -->
 - How to turn GenAI on and off <!-- {{< fa x >}} -->
 ::: 
 
 ::: {.w-50-ns}
-#### <sup>Module 2</sup><br> Enhancing content
+#### <sup>Module 2</sup><br> Enhancing Content
 
 - How to edit content <!-- {{< fa x >}} -->
 - Write optional assessment prompts <!-- {{< fa x >}} -->
