--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Implementing <br>custom tests"
+title: "Implementing <br>Custom Tests"
 subtitle: "Developer Fundamentals — Module 3 of 4<br><br>_Click [{{< fa chevron-right >}}](#learning-objectives) to start_"
 lightbox: true
 format:
