Next steps > In summary & checked boxes

--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -403,11 +403,11 @@ Finalizing model documentation
 ::: {.column width="70%" .bl .pl4 .f4}
 In this final module, you learned how to:
 
-- [ ] View logged test result metadata
-- [ ] Add or edit content blocks in your model documentation
-- [ ] Submit your model documentation for approval
-- [ ] Collaborate with other stakeholders on your model
-- [ ] Track updates on your model
+- [x] View logged test result metadata
+- [x] Add or edit content blocks in your model documentation
+- [x] Submit your model documentation for approval
+- [x] Collaborate with other stakeholders on your model
+- [x] Track updates on your model
 :::
 ::::
 
