--- a/site/training/developer-fundamentals/implementing-custom-tests.qmd
+++ b/site/training/developer-fundamentals/implementing-custom-tests.qmd
@@ -639,7 +639,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 ::::
 
 
-# Next steps {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
@@ -652,10 +652,10 @@ Implementing custom tests
 ::: {.column width="70%" .bl .pl4 .f3}
 In this third module, you learned how to:
 
-- [ ] Implement, run, and log custom inline tests
-- [ ] Register external test providers for reusable custom tests
-- [ ] Include custom test results in your documentation template
-- [ ] Configure your model's documentation template
+- [x] Implement, run, and log custom inline tests
+- [x] Register external test providers for reusable custom tests
+- [x] Include custom test results in your documentation template
+- [x] Configure your model's documentation template
 
 :::
 ::::
