--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -542,7 +542,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 
 
-# Next steps {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
@@ -555,11 +555,11 @@ Learning to run tests
 ::: {.column width="70%" .bl .pl4 .f3}
 In this second module, you learned how to:
 
-- [ ] Identify relevant tests to run from {{< var vm.product >}}'s test repository
-- [ ] Initialize {{< var vm.product >}} `Dataset` and `Model` objects
-- [ ] Run out-of-the-box tests with the {{< var validmind.developer >}}
-- [ ] Log test results to the {{< var validmind.platform >}}
-- [ ] Insert logged test results into your model's documentation
+- [x] Identify relevant tests to run from {{< var vm.product >}}'s test repository
+- [x] Initialize {{< var vm.product >}} `Dataset` and `Model` objects
+- [x] Run out-of-the-box tests with the {{< var validmind.developer >}}
+- [x] Log test results to the {{< var validmind.platform >}}
+- [x] Insert logged test results into your model's documentation
 
 :::
 ::::
