--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -337,7 +337,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
-# Next steps {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
 ## {.scrollable}
 
@@ -350,10 +350,10 @@ Using {{< var vm.product >}} for model development
 ::: {.column width="70%" .bl .pl4 .f3}
 In this first module, you learned how to:
 
-- [ ] Register a model in the {{< var validmind.platform >}}
-- [ ] Install the {{< var validmind.developer >}} in your environment
-- [ ] Connect to your registered model in the {{< var validmind.platform >}}
-- [ ] Preview and verify your model's documentation template
+- [x] Register a model in the {{< var validmind.platform >}}
+- [x] Install the {{< var validmind.developer >}} in your environment
+- [x] Connect to your registered model in the {{< var validmind.platform >}}
+- [x] Preview and verify your model's documentation template
 
 :::
 ::::
